# matf-cpp

./: .gitignore  CMakeLists.txt  README.md
dijkstra/: CMakeLists.txt
disjunktno_stablo/: CMakeLists.txt  main.cpp
fenvik_tree/: CMakeLists.txt
include/: test.h
kia/: CMakeLists.txt  README.md
kia/autocomplete/: CMakeLists.txt  main.cpp
kia/dijkstra/: main.cpp
kia/disjunktni_skupovi/: CMakeLists.txt  README.md  main.cpp
kia/main/: CMakeLists.txt
kia/odnosi/: CMakeLists.txt  README.md  main.cpp
kia/osvoji_region/: CMakeLists.txt  README.md  main.cpp
kia/prefix_tree/: main.cpp
kia/random/: CMakeLists.txt  LinkedList.c  LinkedList.h  main.c
kia/segment_tree/: CMakeLists.txt  main.cpp
kia/slozene_reci/: CMakeLists.txt  README.md  main.cpp
kia/suma_raspona/: CMakeLists.txt  main.cpp
kia/suma_raspona_prefix_sum/: CMakeLists.txt  README.md  main.cpp
main/: CMakeLists.txt  main.cpp
main/src/: test.cpp
prefix_tree/: CMakeLists.txt  main.cpp
segment_tree/: main.cpp
setment_tree/: main.cpp
