cmake_minimum_required(VERSION 3.28)
project(matf_cpp)
add_subdirectory(main)
add_subdirectory(dijkstra)
add_subdirectory(fenvik_tree)
add_subdirectory(prefix_tree)
add_subdirectory(disjunktno_stablo)
add_subdirectory(segment_tree)

# 1.
add_subdirectory(autocomplete)
add_subdirectory(suma_raspona)
add_subdirectory(suma_raspona_prefix_sum)
add_subdirectory(disjunktni_skupovi)
add_subdirectory(slozene_reci)

# 2.
add_subdirectory(osvoji_region)
add_subdirectory(odnosi)